--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "cd server && nodemon server.js"
+    "server": "cd server && nodemon server.js",
+    "build": "cd client && npm run build"
   },
   "author": "",
   "license": "ISC",
