--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "cd server && nodemon server.js",
-    "build": "cd client && npm run build"
+    "build": "cd client && npm run build",
+    "start": "node server/server.js"
   },
   "author": "",
   "license": "ISC",
